tests/baselines/reference/parserSkippedTokens11.errors.txt
==== tests/cases/compiler/parserSkippedTokens11.ts (6 errors) ====
    ; \ \ \ 
      ~
!!! parserSkippedTokens11.ts(1,3): error TS1001: Unexpected character "\".
      ~
!!! parserSkippedTokens11.ts(1,3): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
        ~
!!! parserSkippedTokens11.ts(1,5): error TS1001: Unexpected character "\".
        ~
!!! parserSkippedTokens11.ts(1,5): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
          ~
!!! parserSkippedTokens11.ts(1,7): error TS1001: Unexpected character "\".
          ~
!!! parserSkippedTokens11.ts(1,7): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.